	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.1 patched


NEW FEATURES

    o	install.packages(NULL) now lists packages only once even if they
	occur in more than one repository (as the latest compatible
	version of those available will always be downloaded).


BUG FIXES

    o	parse_Rd() still did not handle source reference encodings
	properly.

    o	PrintValue no longer attempts to print attributes for CHARSXPs
	as those attributes are used internally for the CHARSXP cache.
	This fixes a segfault when calling Rf_PrintValue on a CHARSXP
	from C code.

    o	PDF graphics output was producing TWO instances of anything
	drawn with the symbol font face. (Report from Baptiste Auguie.)

    o	length(x) <- newval and grep() could cause memory corruption.
	(PR#13837)

    o	If model.matrix() was given too large a model, it could crash
        R. (PR#13838, fix found by Olaf Mersmann.)

    o	seq_along(x) is now equivalent to seq_len(length(x)); previously it
	was not, when x had a "surprising" length() method.

    o	gzcon() (used by load()) would re-open an open connection,
    	leaking a file handle each time. (PR#13841)



		CHANGES IN R VERSION 2.9.1


NEW FEATURES

    o	New function anyDuplicated(x) returns 0 (= FALSE) or the index
	of the first duplicated entry of x.

    o	matplot(), matlines() and matpoints() now also obey a 'lend'
	argument, determining line end styles. (Wish of PR#13619).

    o	bw.SJ(), bw.bcv() and bw.ucv() now gain an optional 'tol'
	argument allowing more accurate estimates.

    o	new.packages() no longer regards packages with the same name
	as a member of an installed bundle as 'new' (this is now
	consistent with the dependency checks in install.packages()).

	It no longer reports on partially installed bundles (since
	members can be updated individually if a bundle is unbundled).

    o	old.packages() and hence updates.packages() will look for